@@ -21,9 +21,8 @@ def extension(buildout=None):
 
     buildout_dir = buildout['buildout']['directory']
     config = Config(buildout_dir)
-    if not config._config.has_section('buildout'):
-        config._config.add_section('buildout')
-    config._config.set('buildout', 'args', " ".join(sys.argv))
+    if os.path.split(sys.argv[0])[1] == 'buildout':
+        config.buildout_args = list(sys.argv)
 
     sources_dir = buildout['buildout'].get('sources-dir', 'src')
     if not os.path.isabs(sources_dir):
